# optimeering-beta

./: .flake8  .gitignore  .readthedocs.yaml  BUILD  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  generate.sh  mypy.ini  optimeering_beta_README.md  pants.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
docs/: BUILD
docs/site/: .buildinfo  access.html  authentication.html  client.html  configuration.html  dataclasses.html  examples.html  filters.html  genindex.html  index.html  models.html  objects.inv  predictions.html  py-modindex.html  search.html  searchindex.js
docs/source/: BUILD  access.rst  authentication.rst  client.rst  conf.py  configuration.rst  examples.rst  filters.rst  index.rst  models.rst
examples/: retrieve_series.py  retrieve_versioned.py
generate/: BUILD  create_config.py  fix_openapi_extensions.py  openapi.json
generate/additional_python_files/: BUILD  extras.py  logger.py  silent_type_cast.py
generate/python_templates/: __init__model.mustache  __init__package.mustache  api.mustache  api_client.mustache  configuration.mustache  model_anyof.mustache  model_generic.mustache  pandas.mustache  partial_api.mustache  partial_api_args.mustache  partial_api_args_pagination_removed.mustache  partial_api_pagination_removed.mustache  partial_header.mustache  rest.mustache
generation/: BUILD  azure_authentication.py  fix_openapi_extensions.py  generation_config.config  openapi.json
generation/python_templates/: __init__api.mustache  api.mustache  api_client.mustache  api_host.mustache  configuration.mustache  example_api.mustache  model_anyof.mustache  model_generic.mustache  partial_api.mustache  partial_api_pagination_removed.mustache
generation/tests/: BUILD  test_client.py
optimeering_beta/: __init__.py  api_client.py  configuration.py  exceptions.py  extras.py  rest.py
optimeering_beta/api/: __init__.py  access_api.py  parameters_api.py  predictions_api.py
optimeering_beta/docs/: End.md  EnumParameters.md  (+14 more)
tests/: BUILD  test_client.py
(+53 files in other folders)
